convention center/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

body {
    font-family: "Poppins", sans-serif;
}

img {
    max-width: 100%;
    height: auto;
}

ul {
    list-style-type: none;
    padding: 0;
}

.card-price {
    font-family: 'Roboto', sans-serif;
}

.pricing-card {
    border: none;
    border-radius: 20px;
    transition: transform 0.3s;
    padding: 2rem 1rem;
}

.btn-outline-primary-custom {
    background-color: #fff0f5;
    color: #4e73df;
    border: none;
    border-radius: 50px;
    padding: 10px 30px;
    font-weight: bold;
}

.alert-custom {
    border-left: 8px solid #4e73df;
    top: 35%;
    left: 66%;
    z-index: 100;
    border-radius: 4px;
    white-space: nowrap;
}

.review-img {
    width: 100px;
    height: 100px;
    object-fit: cover;
}

.fa-circle-check {
    color: #5243C2;
    opacity: 0.5;
}

.pricing-card:hover {
    background-color: #4e73df;
    color: #ffffff;
    transform: translateY(-50px);
    box-shadow: 0 20px 20px rgba(57, 100, 241, 0.336);
}

.pricing-card:hover p.text-muted,
.pricing-card:hover ul li.text-muted,
.pricing-card:hover ul li i.fa-circle-check {
    color: #ffffff !important;
    opacity: 1 !important;
}

.btn-outline-primary-custom:hover {
    background-color: #ffffff;
    color: #4e73df;
    border: none;
}

.download {
    font-size: 0.75rem;
    color: #ffffff;
}

@media (max-width: 570px){
    .alert-custom {
        top: -4%;
        left: 55%;
        transform: translateX(-50%);
    }
}

